<?xml version="1.0"?>
<package format="2">
  <name>rqt_controller_bug</name>
  <version>0.0.0</version>
  <description>rqt_controller_manager bug reproduction</description>

  <maintainer email="robert@stamm-wilbrandt.de">Robert Wilbrandt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>ros_control_boilerplate</exec_depend>
  <exec_depend>rqt_controller_manager</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export />
</package>
